# docs/swagger.json
@@ -833,10 +833,10 @@
                             "type": "string"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ServerErrorMessage"
+                            "$ref": "#/definitions/response.ErrorMessage"
                         }
                     }
                 }
